--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Donald Trump Has Tiny Hands Pac</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Donald Trump Has (Really) Tiny Hands Political Action Committee</title>
 </head>
 <style type="text/css">
   body {
-    background: transparent ./hands-up.png no-repeat top left;
+    background: transparent url(./hands-up.jpg) no-repeat top left;
     background-cover: stretch;
   }
 </style>
