--- a/index.html
+++ b/index.html
@@ -6,38 +6,7 @@
   <link rel="icon" href="hand-of-no.jpg" type="image/x-icon" />
 
 </head>
-<style type="text/css">
-  body, html { height: 100%; }
-  body, html, .content { margin: 0; }
-
-  body { position: relative; }
-  .content {
-    background: #15140F url(./hands-up.jpg) no-repeat top left;
-    background-size: cover;
-    font-family: Impact sans-serif;
-    font-size: 30px;
-    color: white;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    padding: 50px;
-  }
-  .inner {
-    width: 40%;
-  }
-  .pointer {
-    position: fixed;
-    left: 14%;
-    bottom: 30%;
-    display: none;
-  }
-  a,
-  a:visited,
-  a:hover,
-  a:active { color: white; }
-</style>
+<link rel="stylesheet" type="text/css" href="./style.css">
 <body>
   <div class="content">
     <div class="inner">
