--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Donald Trump Has (Really) Tiny Hands Political Action Committee</title>
   <link rel="icon" href="hand-of-no.jpg" type="image/x-icon" />
+  <meta property="og:title" content="DONALD TRUMP HAS (REALLY) TINY HANDS POLITICAL ACTION CMT" />
+  <meta property="og:url" content="http://www.donaldtrumphastinyhands.com" />
+  <meta property="og:description" content="SIGN THE PETITION - MEASURE THE HANDS ✋ ! (THE WOLRD MUST KNOW THE TRUTH 🕵)" / />
+  <meta property="og:image" content="http://www.donaldtrumphastinyhands.com/hands-up.jpg" />
+  <meta property="og:type" content="website" />
 
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@TrumpHandsPAC">
+  <meta name="twitter:title" content="DONALD TRUMP HAS (REALLY) TINY HANDS POLITICAL ACTION CMT" />
+  <meta name="twitter:description" content="SIGN THE PETITION - MEASURE THE HANDS ✋ ! (THE WOLRD MUST KNOW THE TRUTH 🕵)" />
+  <meta name="twitter:image:src" content="http://www.donaldtrumphastinyhands.com/hands-up.jpg" />
 </head>
 <link rel="stylesheet" type="text/css" href="./style.css">
 <body>
@@ -12,7 +22,9 @@
     <div class="inner">
       <h2>DONALD TRUMP HAS (REALLY)<br />TINY HANDS</h2>
       <h1>Political Action Committee</h1>
-      <a target="_blank" href="http://petitions.moveon.org/sign/donald-trump-release.fb49?source=c.fb&r_by=13372831"><h3>SIGN THE PETITION - MEASURE THE HANDS</h3></a>
+      <a target="_blank" href="http://petitions.moveon.org/sign/donald-trump-release.fb49?source=c.fb&r_by=13372831">
+        <h3>SIGN THE PETITION - MEASURE THE HANDS</h3>
+      </a>
       <a href="./coming-soon.html"><button>DONATE</button></a>
       <a href="./coming-soon.html"><button>SHOP</button></a>
       <a href="./coming-soon.html"><button>REGISTER TO VOTE</button></a>
