--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <link rel="icon" href="./hand-of-no.jpg" type="image/x-icon" />
   <meta property="og:title" content="DONALD TRUMP HAS (REALLY) TINY HANDS POLITICAL ACTION CMT" />
   <meta property="og:url" content="http://www.donaldtrumphastinyhands.com" />
-  <meta property="og:description" content="SIGN THE PETITION - MEASURE THE HANDS ✋ 🕵! ("/>
+  <meta property="og:description" content="SIGN THE PETITION - MEASURE THE HANDS ✋ 🕵! (">
   <meta property="og:image" content="http://www.donaldtrumphastinyhands.com/hands-up.jpg" />
   <meta property="og:type" content="website" />
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@TrumpHandsPAC">
   <meta name="twitter:title" content="DONALD TRUMP HAS (REALLY) TINY HANDS POLITICAL ACTION CMT" />
-  <meta name="twitter:description" content="SIGN THE PETITION - MEASURE THE HANDS ✋ 🕵! ("/>
+  <meta name="twitter:description" content="SIGN THE PETITION - MEASURE THE HANDS ✋ 🕵! (">
   <meta name="twitter:image:src" content="http://www.donaldtrumphastinyhands.com/hands-up.jpg" />
 </head>
 <link rel="stylesheet" type="text/css" href="./style.css">
