--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <div class="content">
     <div class="social">
-      <div class="fb-like" data-href="https://www.facebook.com/donaldtrumphastinyhands" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+      <div class="fb-wrap"><div class="fb-like" data-href="https://www.facebook.com/donaldtrumphastinyhands" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div></div>
       <a href="https://twitter.com/TrumpHandsPAC" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @TrumpHandsPAC</a>
     </div>
     <div class="inner">
