--- a/coming-soon.html
+++ b/coming-soon.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Donald Trump Has (Really) Tiny Hands Political Action Committee</title>
-  <link rel="icon" href="hand-of-no.jpg" type="image/x-icon" />
+  <link rel="icon" href="./favicon.jpg" type="image/x-icon" />
 
 </head>
 <link rel="stylesheet" type="text/css" href="./style.css">
