--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <a href="https://twitter.com/TrumpHandsPAC" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @TrumpHandsPAC</a>
       <div>
         <form action="https://docs.google.com/forms/d/1B9X2FltWDbdDRcjnMD6NuZQK_S9x1-98hmL2Nyy8C5c/formResponse" target="_blank" method="POST" >
-          <input type="email" name="entry.905179320" placeholder="YOUR EMAIL"><br>
-          <input type="text" name="entry.1425224127" placeholder="YOUR ZIP"><br>
+          <input type="email" name="entry.905179320" placeholder="YOUR EMAIL">
+          <input type="text" name="entry.1425224127" placeholder="YOUR ZIP">
           <input type="submit" value="JOIN">
         </form>
       </div>
