--- a/index.html
+++ b/index.html
@@ -19,26 +19,21 @@
 <link rel="stylesheet" type="text/css" href="./style.css">
 <body>
   <div class="content">
-    <div class="social">
-      <div class="fb-wrap"><div class="fb-like" data-href="https://www.facebook.com/donaldtrumphastinyhands" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div></div>
-      <a href="https://twitter.com/TrumpHandsPAC" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @TrumpHandsPAC</a>
-      <div>
+    <h1>DONALD TRUMP HAS<br />TINY HANDS PAC</h1>
+    <div class="inner">
         <form action="https://docs.google.com/forms/d/1B9X2FltWDbdDRcjnMD6NuZQK_S9x1-98hmL2Nyy8C5c/formResponse" target="_blank" method="POST" >
+          <h3>Sign the Petition:<br /><a target="_blank" href="http://petitions.moveon.org/sign/donald-trump-release.fb49?source=c.fb&r_by=13372831">"RELEASE THE MEASUREMENTS"</a></h3>
           <input type="email" name="entry.905179320" placeholder="YOUR EMAIL">
           <input type="text" name="entry.1425224127" placeholder="YOUR ZIP">
           <input type="submit" value="JOIN">
         </form>
-      </div>
-    </div>
-    <div class="inner">
-      <h2>DONALD TRUMP HAS (REALLY)<br />TINY HANDS</h2>
-      <h1>Political Action Committee</h1>
-      <a target="_blank" href="http://petitions.moveon.org/sign/donald-trump-release.fb49?source=c.fb&r_by=13372831">
-        <h3>SIGN THE PETITION - MEASURE THE HANDS</h3>
-      </a>
       <a href="./coming-soon.html"><button>DONATE</button></a>
       <a href="./coming-soon.html"><button>SHOP</button></a>
       <a href="./coming-soon.html"><button>REGISTER TO VOTE</button></a>
+    </div>
+    <div class="social">
+      <div class="fb-wrap"><div class="fb-like" data-href="https://www.facebook.com/donaldtrumphastinyhands" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div></div>
+      <a href="https://twitter.com/TrumpHandsPAC" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @TrumpHandsPAC</a>
     </div>
     <div class="pointer">
       <span class="text">TINY</span>
