--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" type="text/css" href="./style.css">
 <body>
   <div class="content">
+    <img src="dththpac.png" class="logo" alt="Donald Trump Has Tiny Hands PAC Logo">
     <h1>DONALD TRUMP HAS<br />TINY HANDS PAC</h1>
     <div class="inner">
         <form action="https://docs.google.com/forms/d/1B9X2FltWDbdDRcjnMD6NuZQK_S9x1-98hmL2Nyy8C5c/formResponse" target="_blank" method="POST" >
