Updated share preview

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Donald Trump Has (Really) Tiny Hands Political Action Committee</title>
   <link rel="icon" href="./favicon.jpg" type="image/x-icon" />
-  <meta property="og:title" content="DONALD TRUMP HAS (REALLY) TINY HANDS POLITICAL ACTION CMT" />
+  <meta property="og:title" content="DONALD TRUMP HAS TINY HANDS PAC" />
   <meta property="og:url" content="http://www.donaldtrumphastinyhands.com" />
   <meta property="og:description" content="SIGN THE PETITION - MEASURE THE HANDS ✋ 🕵!" >
-  <meta property="og:image" content="http://www.donaldtrumphastinyhands.com/hands-up.jpg" />
+  <meta property="og:image" content="http://www.donaldtrumphastinyhands.com/share-preview.jpg" />
   <meta property="og:type" content="website" />
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@TrumpHandsPAC">
-  <meta name="twitter:title" content="DONALD TRUMP HAS (REALLY) TINY HANDS POLITICAL ACTION CMT" />
+  <meta name="twitter:title" content="DONALD TRUMP HAS TINY HANDS PAC" />
   <meta name="twitter:description" content="SIGN THE PETITION - MEASURE THE HANDS ✋ 🕵!" >
-  <meta name="twitter:image:src" content="http://www.donaldtrumphastinyhands.com/hands-up.jpg" />  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <meta name="twitter:image:src" content="http://www.donaldtrumphastinyhands.com/share-preview.jpg" /> 
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
