--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h5>Tiny Hands, HUGE News!</h5>
         <form action="https://docs.google.com/forms/d/1B9X2FltWDbdDRcjnMD6NuZQK_S9x1-98hmL2Nyy8C5c/formResponse" target="_blank" method="POST" >
           <input type="email" name="entry.905179320" placeholder="Your Email Address">
-          <input type="text" name="entry.1425224127" placeholder="Your Zip Code" class="zip"><br />
+          <input type="text" name="entry.1425224127" placeholder="Your Zip Code" class="zip">
           <button type="submit">GET UPDATES</button>
         </form>
       <div class="fb-wrap"><div class="fb-like" data-href="https://www.facebook.com/donaldtrumphastinyhands" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div></div>
