Remove petition from homepage
restructured the donate button a bit, too.

--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
     <div class="inner">
     <img src="dththpac.png" class="logo" alt="Donald Trump Has Tiny Hands PAC Logo">
     <h1>DONALD TRUMP HAS<br class="large-breakpoint" /> TINY HANDS PAC</h1>
-    <a href="https://secure.actblue.com/contribute/page/trumphandspac" target="_blank">
-      <button type="href">DONATE</button>
+    <a href="https://secure.actblue.com/contribute/page/trumphandspac" target="_blank" class="button">
+      DONATE
     </a>
-    <h3>Sign the Petition:<br /><a target="_blank" href="http://petitions.moveon.org/sign/donald-trump-release.fb49?source=c.fb&r_by=13372831">"RELEASE THE MEASUREMENTS"</a></h3>
-    
     <div class="social">
       <h5>Tiny Hands, HUGE News!</h5>
         <form action="https://docs.google.com/forms/d/1B9X2FltWDbdDRcjnMD6NuZQK_S9x1-98hmL2Nyy8C5c/formResponse" target="_blank" method="POST" >
