--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
       <span class="text">TINY</span>
       <span class="arrow"></span>
     </div>
+    <div class="disclaimer">
+      Paid for by Donald Trump Has Tiny Hands PAC. Not authorized by any candidate or candidate's committee.
+    </div>
   </div>
   <div id="fb-root"></div>
   <script>
