--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Donald Trump Has (Really) Tiny Hands Political Action Committee</title>
+  <title>Donald Trump Has Tiny Hands PAC</title>
   <link rel="icon" href="./favicon.jpg" type="image/x-icon" />
+  <meta charset="utf-8">
   <meta property="og:title" content="DONALD TRUMP HAS TINY HANDS PAC" />
   <meta property="og:url" content="http://www.donaldtrumphastinyhands.com" />
   <meta property="og:description" content="SIGN THE PETITION - MEASURE THE HANDS ✋ 🕵!" >
@@ -22,9 +23,8 @@
     <div class="inner">
     <img src="dththpac.png" class="logo" alt="Donald Trump Has Tiny Hands PAC Logo">
     <h1>DONALD TRUMP HAS<br class="large-breakpoint" /> TINY HANDS PAC</h1>
-    <a href="https://secure.actblue.com/contribute/page/trumphandspac" target="_blank" class="button">
-      DONATE
-    </a>
+    <p>Lend a hand to help get our <br />#ReleaseTheMeasurements ad on TV!</p>
+    <a href="https://secure.actblue.com/contribute/page/trumphandspac" target="_blank" class="button">DONATE</a>
     <div class="social">
       <h5>Tiny Hands, HUGE News!</h5>
         <form action="https://docs.google.com/forms/d/1B9X2FltWDbdDRcjnMD6NuZQK_S9x1-98hmL2Nyy8C5c/formResponse" target="_blank" method="POST" >
