--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </div>
   <div id="fb-root"></div>
   <div id="lightbox_content">
-    <iframe id="lightbox_iframe" width="420" height="315" off-src="https://www.youtube.com/embed/KskujEVvl84?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+    <iframe id="lightbox_iframe" width="100%" off-src="https://www.youtube.com/embed/KskujEVvl84?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
   </div>
   <div id="lightbox_fade" ></div>
   <script>
@@ -78,6 +78,7 @@
       lightbox_content.style.display = 'none'
       lightbox_fade.style.display = 'none'
       lightbox_fade.onclick = null
+      lightbox_iframe.src = null
     }
   </script>
   
