--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </div>
   <div id="fb-root"></div>
   <div id="lightbox_content">
-    <iframe id="lightbox_iframe" width="100%" off-src="https://www.youtube.com/embed/KskujEVvl84?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+    <iframe id="lightbox_iframe" width="100%" height="100%" off-src="https://www.youtube.com/embed/KskujEVvl84?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
   </div>
   <div id="lightbox_fade" ></div>
   <script>
