Adjust placement of video

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="twitter:site" content="@TrumpHandsPAC">
   <meta name="twitter:title" content="DONALD TRUMP HAS TINY HANDS PAC" />
   <meta name="twitter:description" content="SIGN THE PETITION - MEASURE THE HANDS ✋ 🕵!" >
-  <meta name="twitter:image:src" content="http://www.donaldtrumphastinyhands.com/share-preview.jpg" /> 
+  <meta name="twitter:image:src" content="http://www.donaldtrumphastinyhands.com/share-preview.jpg" />
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
@@ -24,7 +24,7 @@
       <img src="dththpac.png" class="logo" alt="Donald Trump Has Tiny Hands PAC Logo">
       <h1>DONALD TRUMP HAS<br class="large-breakpoint" /> TINY HANDS PAC</h1>
       <p>Lend a hand to help get our <br />#ReleaseTheMeasurements ad on TV!</p>
-      <a href="https://secure.actblue.com/contribute/page/trumphandspac" target="_blank" class="button">DONATE</a>
+      <a href="https://secure.actblue.com/contribute/page/trumphandspac" target="_blank" class="button">SUPPORT THE AD</a>
       <div class="social">
         <div class="video_box">
           <a href="javascript:void(0)" onclick="OpenLightbox()">
@@ -80,6 +80,6 @@
       lightbox_iframe.src = null
     }
   </script>
-  
+
 </body>
 </html>
