--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="disclaimer">
-      Paid for by Trump Has Tiny Hands PAC. Not authorized by any candidate or candidate's committee.
+      Paid for by Americans Against Insecure Billionaires with Tiny Hands PAC. Not authorized by any candidate or candidate's committee.
     </div>
   </div>
   <div id="fb-root"></div>
