--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <h1>DONALD TRUMP HAS<br class="large-breakpoint" /> TINY HANDS PAC</h1>
       <p>Lend a hand to help get our <br />#ReleaseTheMeasurements ad on TV!</p>
       <a href="https://secure.actblue.com/contribute/page/trumphandspac" target="_blank" class="button">SUPPORT THE AD</a>
+      <a href="https://tinyhandspac.storenvy.com/" target="_blank" class="button">SHOP</a>
       <div class="social">
         <div class="video_box">
           <a href="javascript:void(0)" onclick="OpenLightbox()">
