remove last references to old name
and stubbier fingers

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Donald Trump Has Tiny Hands PAC</title>
-  <link rel="icon" href="./favicon.jpg" type="image/x-icon" />
+  <link rel="icon" href="favicon.jpg" type="image/x-icon" />
   <meta charset="utf-8">
-  <meta property="og:title" content="DONALD TRUMP HAS TINY HANDS PAC" />
+  <meta property="og:title" content="Americans Against Insecure Billionaires with Tiny Hands PAC" />
   <meta property="og:url" content="http://www.donaldtrumphastinyhands.com" />
   <meta property="og:description" content="SIGN THE PETITION - MEASURE THE HANDS ✋ 🕵!" >
   <meta property="og:image" content="http://www.donaldtrumphastinyhands.com/share-preview.jpg" />
@@ -13,16 +13,16 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@TrumpHandsPAC">
-  <meta name="twitter:title" content="DONALD TRUMP HAS TINY HANDS PAC" />
+  <meta name="twitter:title" content="Americans Against Insecure Billionaires with Tiny Hands PAC" />
   <meta name="twitter:description" content="SIGN THE PETITION - MEASURE THE HANDS ✋ 🕵!" >
   <meta name="twitter:image:src" content="http://www.donaldtrumphastinyhands.com/share-preview.jpg" />
-  <link rel="stylesheet" type="text/css" href="./style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <div class="content">
     <div class="inner">
-      <img src="dththpac.png" class="logo" alt="Donald Trump Has Tiny Hands PAC Logo">
-      <h1>DONALD TRUMP HAS<br class="large-breakpoint" /> TINY HANDS PAC</h1>
+      <img src="dththpac.png" class="logo" alt="Americans Against Insecure Billionaires with Tiny Hands PAC Logo">
+      <h1>Americans Against<br class="large-breakpoint" /> Insecure Billionaires<br class="large-breakpoint" /> with Tiny Hands PAC</h1>
       <p>Lend a hand to help get our <br />#ReleaseTheMeasurements ad on TV!</p>
       <a href="https://secure.actblue.com/contribute/page/trumphandspac" target="_blank" class="button">SUPPORT THE AD</a>
       <a href="https://tinyhandspac.storenvy.com/" target="_blank" class="button">SHOP</a>
